# keystore

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  default.xml  install.sh  patch.sh
.cargo/: config.toml
.github/workflows/: ci.yaml
aidl/keymint/: Cargo.toml  build.rs
aidl/keymint/src/: lib.rs
aidl/keystore2/: Cargo.toml  build.rs
aidl/keystore2/src/: lib.rs
aidl/securelock/: Cargo.toml  build.rs
aidlgen/: Cargo.toml
aidlgen/src/: lib.rs
keystore/: Cargo.toml  build.rs
keystore/src/: authorizations.rs  common.rs  delete.rs  lib.rs  list.rs  main.rs  rsa.rs
keystore/src/rsa/: crypt.rs  decrypt.rs  encrypt.rs  generate.rs
patch/: 0001-generate-stub-binder_ndk.patch  0002-fix-toolchain-path-for-macOS.patch
