[package]
name = "keystore2-aidl"
version = "4.0.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
android_hardware_security_keymint = { package = "keymint-aidl", version = "3.0.0", path = "../keymint" }
binder = { package = "android-binder", version = "0.1", path = "../../aosp/frameworks/native/libs/binder/rust" }

[build-dependencies]
aidlgen = { package = "aidlgen", version = "0.1", path = "../../aidlgen" }
glob = "0.3.2"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(android_vendor)", "cfg(android_ndk)", "cfg(android_vndk)", "cfg(trusty)"]
